--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,17 +1,13 @@
 {% set name = "zc.lockfile" %}
 {% set version = "1.4" %}
-{% set bundle = "tar.gz" %}
-{% set hash_type = "sha256" %}
-{% set hash_val = "95a8e3846937ab2991b61703d6e0251d5abb9604e18412e2714e1b90db173253" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.{{ bundle }}
-  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.{{ bundle }}
-  {{ hash_type }}: {{ hash_val }}
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: 95a8e3846937ab2991b61703d6e0251d5abb9604e18412e2714e1b90db173253
 
 build:
   preserve_egg_dir: True
