--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - setuptools
   run:
     - python
+    - setuptools
 
 test:
   imports:
@@ -35,7 +36,7 @@ test:
 about:
   home: https://github.com/zopefoundation/zc.lockfile
   summary: Basic inter-process locks
-  license: ZPL 2.1
+  license: ZPL-2.1
   license_file: LICENSE.txt
   license_family: Other
   description: |
@@ -51,4 +52,4 @@ extra:
   recipe-maintainers:
     - pmlandwehr
   skip-lints:
-    - incorrect_license
+    - python_build_tool_in_run
